# Intralogistic-robot-simulation

./: README.md
logistic/: CMakeLists.txt  package.xml
logistic/config/: gz_bridge.yaml
logistic/include/logistic/: DummySensor.hh
logistic/launch/: world_launch.py
logistic/src/: DummySensor.cc
logistic/worlds/: model.sdf
