<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>logistic</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="chinmay@todo.todo">chinmay</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ros_gz_bridge</depend>
  <depend>gz-sim8</depend>       <!-- Adjust version for Harmonic -->
  <depend>gz-transport13</depend> <!-- Adjust version for Harmonic -->
  <depend>gz-msgs10</depend>     <!-- Adjust version for Harmonic -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>